--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>AirTraffic</title>
-</head>
-<body>
-  <h1>AirTraffic Welcome</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>AirTraffic</title>
+
+    <!-- Loading styles -->
+    <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
+    <link href="css/styles.css" rel="stylesheet">
+        
+    <!-- Loading libraries -->
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    
+    <link rel="stylesheet" type="text/css" href="/node_modules/datatables/media/css/jquery.dataTables.min.css">
+    <script src="/node_modules/datatables/media/js/jquery.dataTables.min.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1> Welcome to the AirTraffic</h1>
+      <h4>Here you can see all the airplanes that are flying over you location. In the list above you can see fligth details available and sort airplanes by altitude they are flying at.</h4>
+      <table id="data-table" width="100%">
+        <thead>  
+          <tr>  
+            <th>Direction</th>
+            <th>Altitude</th>
+            <th>Flight code number</th>
+          </tr>  
+       </thead> 
+      </table>
+    </div>
+
+    <!-- Loading app scripts -->
+    <script src="js/index.js"></script>
+  </body>
 </html>
