Mustache library added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         
     <!-- Loading libraries -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    
+    <script src="/node_modules/mustache/mustache.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
