Information about to error to user via modals

--- a/index.html
+++ b/index.html
@@ -40,6 +40,60 @@
       </div>
     </div>
 
+    <!-- Failed location load modal -->
+    <div class="modal fade" id="failedLocationModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">AirTraffic</h4>
+          </div>
+          <div class="modal-body">
+            <p>Unfortunately, we cannot load your location.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismis="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Failed airplane list load modal -->
+    <div class="modal fade" id="failedArplaneListLoadModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">AirTraffic</h4>
+          </div>
+          <div class="modal-body">
+            <p>Unfortunately, we cannot load airplane data in the moment. Please try again later.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismis="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Failed logo load modal -->
+    <div class="modal fade" id="failedLogoLoadModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">AirTraffic</h4>
+          </div>
+          <div class="modal-body">
+            <p>Unfortunately, we cannot load logo of the company. Please try again later.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismis="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Loading app scripts -->
     <script src="js/index.js"></script>
     <script type="text/javascript">
