Resolving CORS security

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="/node_modules/fetch-jsonp/build/fetch-jsonp.js"></script>
   </head>
   <body>
     <div id="route-view"></div>
